--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "seneca": "plugin",
-    "seneca-jsonfile-store": "^0.2.2",
-    "seneca-level-store": "^0.2.1",
-    "lodash": "^2.4.1",
-    "optimist": "^0.6.1"
+    "lodash": "2.4.1",
+    "optimist": "0.6.1"
+  },
+  "peerDependencies": {
+    "seneca": "*",
+    "seneca-level-store": "*",
+    "seneca-jsonfile-store": "*"
   }
 }
